two night commit

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,108 +1,211 @@
+html {
+    box-sizing: border-box;
+}
+
+ *,
+ *::before,
+ *,
+ *::after {
+    box-sizing: inherit;
+ }
+
+
 :root {
-    --main-font: "Roboto", sans-serif;
-    --primery-text-color: #2E2F42;
-    --second-text-color: #434455;
-    --accent-color: #E7E9FC; }
+--main-font: "Roboto", sans-serif;
+--primery-text-color: #2E2F42;
+--second-text-color: #434455;
+--accent-color: #E7E9FC; }
         
-    body {
-    font-family: var(--main-font), sans-serif;
-    background-color: #fff;
-    color: var(--primery-text-color);
-    letter-spacing: -0.015em;
-    }
+body {
+font-family: var(--main-font), sans-serif;
+background-color: #fff;
+color: var(--primery-text-color);
+letter-spacing: -0.015em;
+margin: 0;
+}
         
-    ul {
-    list-style: none;
-    }
+ul {
+list-style: none;
+margin: 0;
+}
+/*         
+.header-page {
+background-color: tomato;
+/* display: inline-block; */
+
+
+
+.logo {
+    display: flex;
+padding-top: 100px 20px;
+font-family: "Raleway";
+color:#4D5AE5;
+text-decoration: none;
+text-transform: uppercase;
+font-weight: 800;
+font-size: 18px;
+line-height: 1.14;
+}
         
-    .logo {
-    font-family: "Raleway";
-    color:#4D5AE5;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.14;
-    }
-        
-    .logo-second {
-    color: #2E2F42;
-    font-family: "Raleway";
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.14;
-    }
+.logo-second {
+color: #2E2F42;
+font-family: "Raleway";
+font-weight: 800;
+font-size: 18px;
+line-height: 1.14;
+}
     
-    
+.container {
+width: 1158px;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+/* outline: 2px solid tomato; */
+/* background-color: teal; */
+} 
+
+
     /* site-nav */
+.site-nav, .auth-nav {
+margin-top: 0;
+margin-bottom: 0;
+padding: 0;
+}
+
+
+
+.site-nav .item {
+    margin-right: 40px;
+}
+.site-nav .item:last-child {
+    margin-right: 0;
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+color: blue;
+ }
         
-    .site-nav .link:hover,
-    .site-nav .link:focus {
-    color: blue;
+.site-nav .link {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+font-family: inherit;
+color: var(--primery-text-color);
+font-weight: 600;
+text-decoration: none;
+font-size: 16px;
+line-height: 1.28;
+}
+
+.auth-nav .item + .item {
+margin-left: 12px;
     }
+
+.auth-nav .link {
+color: var(--second-text-color);
+font-weight: 400;
+text-decoration: none;
+font-size: 16px;
+line-height: 1.5;
+}
         
-    .site-nav .link {
-    font-family: inherit;
-    color: var(--primery-text-color);
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 1.28;
-    }
+.auth-nav .link:hover, 
+.auth-nav .link:focus {
+color: blue;
+} 
+        
+/* Container header-nav */
+
+.header-nav {
+    /* width: 1440px; */
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between;   */
+}
+
+.site-nav {
+    display: flex;
+    align-items: center;
+    margin-left: 76px;
+}
+
+.auth-nav {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.header-main {
+    display: flex;
+    align-items: center;
     
-    .auth-nav .link {
-    color: var(--second-text-color);
-    font-weight: 400;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 1.5;
-    }
-        
-    .auth-nav .link:hover, 
-    .auth-nav .link:focus {
-    color: blue;
-    } 
-        
+}
+
     /* hero */
         
-    .hero {
-    background-color: var(--primery-text-color);
-    }
+.hero {
+background-color: var(--primery-text-color);
+text-align: center;
+padding-top: 180px;
+padding-bottom: 250px;
+}
         
-    .hero-title {
-    font-family: inherit;
-    color: var(--accent-color);
-    font-weight: 600;
-    font-size: 56px;
-    font-size: 0.9;
-    text-align: center;
-    }
+.hero-title {
+margin-top: 0;
+min-width: 169px;
+/* margin-bottom: 48px;
+padding-top: 188px; */
+font-family: inherit;
+color: var(--accent-color);
+font-weight: 600;
+font-size: 56px;
+font-size: 0.9;
+text-align: center;
+}
         
-    .modal-btn {
-    color: #fff;
-    background-color: #4D5AE5;
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.1;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    text-align: center;
-    cursor: pointer; 
-    border: none;
-    } 
+.modal-btn {
+display: inline-block;
+border-radius: 4px;
+/* margin-bottom: 188px; */
+padding: 16px, 32px;
+
+color: #fff;
+background-color: #4D5AE5;
+font-family: inherit;
+font-weight: 600;
+font-size: 16px;
+line-height: 1.1;
+letter-spacing: 0.04em;
+text-transform: uppercase;
+cursor: pointer; 
+border: none;
+   } 
         
-    .modal-btn:hover,
-    .modal-btn:focus {
-    background-color: #fff;
-    color: #4D5AE5;
+.modal-btn:hover,
+.modal-btn:focus {
+background-color: #fff;
+color: #4D5AE5;
     }
         
         
     /* секция BOX преимущества */
         
-    .title-none {
-    overflow: hidden;
+.box {
+margin: 0;
+padding: 0;
+    }
+
+.box {
+display: flex;
+    }
+
+.box-item {
+    margin-right: 24px;
+}
+
+.title-none {
+overflow: hidden;
     } 
         
     .visually-hidden {
@@ -115,12 +218,15 @@
     width: 1px;
     overflow: hidden;
     }
-        
+
     .box-title {
+    padding-top: 120px;
+    margin-top: 0;
+    margin-bottom: 8px;
     color: var(--primery-text-color);
     font-weight: 600;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 1.2;  
     }
         
     .box-text {
@@ -128,46 +234,103 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 1.2;
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 120px;
     }
         
     /* Work-people */
         
     .work-block {
     background-color: #E5E5E5;
+    /* margin: 0; */
     }
-        
+    img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
     .pictures {
     font-weight: 600;
     font-size: 36px;
     line-height: 0.9;
     text-align: center;
+    margin-top: 0;
+    /* padding-top: 120px; */
+    margin-bottom: 70px;
     }
-        
+
+    .pictures-list {
+        display: flex;
+        /* justify-content: space-around; */
+    }
+    
+    .pictures-list {
+    margin-left: 100px;
+    margin-right: 100px;
+margin-bottom: 120px;}
+
+    .pictures-item {
+        margin-right: 24px;
+    }
+
+    /* work */
+
+.work-list {
+    display: flex;
+}
+
+/* .work-list { */
+ /* margin-bottom: 120px; */
+
+
+
+.work-item {
+    margin-right: 24px;
+}
+
     .work-tetle {
+        background-color: #fff;
     font-weight: 600;
     font-size: 20px;
     line-height: 0.9;
     text-align: center;
+    margin: 0;
+    padding-top: 32px;
+    padding-bottom: 8px;
     }
         
     .work-text {
+        background-color: #fff;
     font-weight: 400;
     font-size: 16px;
     line-height: 0.9;
     text-align: center;
+    margin: 0;
+    padding-bottom: 32px;
     }
     
     /* Footer */
         
+    /* footer { */
+        /* margin: 0; */
+    
+
     .logo-block {
     background-color: #2E2F42;
-    }
+    height: 310px;
+    width: 1158px;;
+    padding: 80px 30px;
+    /* padding-left: 56px; */
+}
         
     .copy-text {
     color: var(--accent-color); 
     font-weight: 400;
     font-size: 16px;
     line-height: 1.28;
+    margin: 0;
+   padding-top: 16px;
     }
     
     /* Portfolio */
@@ -178,18 +341,27 @@
         
     /* menu buttons */
         
+.list-item {
+    padding-top: 72px;
+}
+
     .menu-btn {
-    color: #4D5AE5;
-    background-color: #F4F4FD;
-    font-family: inherit;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.1;
-    letter-spacing: 0.3em;
-    text-align: center;
-    cursor: pointer;
-    border: none;
-    }
+display: inline-block;
+border-radius: 4px;
+padding: 16px, 32px;
+margin: 0;
+min-width: 169px;
+color: #4D5AE5;
+background-color: #F4F4FD;
+font-family: inherit;
+font-weight: 600;
+font-size: 16px;
+line-height: 1.1;
+letter-spacing: 0.3em;
+text-align: center;
+cursor: pointer;
+border: none;
+}
         
     .menu-btn:hover,
     .menu-btn:focus {
@@ -203,19 +375,27 @@
     font-family: inherit;
     text-decoration: none;
     }
-        
+    
+    .presentation-list {
+        padding-top: 72px;
+    }
+
     .presentation-title {
     font-family: inherit;
     color: var(--primery-text-color);
     font-weight: 600;
     font-size: 16px;
     line-height: 1;
+    margin: 0;
+    padding-top: 32px;
     }
         
     .presentation-text {
     font-family: inherit;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
+    padding-top: 8px;
     }
         
     .presentation-subject {
