--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ width: 1158px;
 padding-left: 15px;
 padding-right: 15px;
 margin: 0 auto;
-outline: 2px solid tomato;
+/* outline: 2px solid tomato; */
 } 
 
     /* site-nav */
