--- a/css/styles.css
+++ b/css/styles.css
@@ -20,37 +20,58 @@ body {
 font-family: var(--main-font), sans-serif;
 background-color: #fff;
 color: var(--primery-text-color);
-letter-spacing: -0.015em;
+letter-spacing: 0.02em;
 margin: 0;
 }
         
 ul {
 list-style: none;
 margin: 0;
-margin: 0;}
+margin: 0;
+}
 
+header {
+    background: #FFFFFF;
+border-bottom: 1px solid #E7E9FC;
+}
+
+footer {
+    background-color:var(--primery-text-color);
+}
+
+.h1.hero-title {
+margin: 0;
+}
+
+.section {
+/* padding-top: 120px; */
+/* padding-bottom: 72px; */
+}
 
 .logo {
 display: flex;
-padding-top: 100px 20px;
-font-family: "Raleway";
+align-items: center;
+font-family: "Raleway", sans-serif;
 color:#4D5AE5;
+width: 44px;
 text-decoration: none;
 text-transform: uppercase;
+letter-spacing: 0.03em;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.14;
 }
-        
+
 .logo-second {
 color: #2E2F42;
 font-family: "Raleway";
 font-weight: 800;
+width: 48px;
 font-size: 18px;
 line-height: 1.14;
+text-decoration: none;
+text-transform: uppercase;
 }
-
-
     
 .container {
 width: 1158px;
@@ -68,10 +89,10 @@ padding: 0;
 }
 
 .site-nav .item {
-    margin-right: 40px;
+margin-right: 40px;
 }
 .site-nav .item:last-child {
-    margin-right: 0;
+margin-right: 0;
 }
 
 .site-nav .link:hover,
@@ -80,9 +101,9 @@ color: blue;
  }
         
 .site-nav .link {
-    display: block;
-    padding-top: 24px;
-    padding-bottom: 24px;
+display: block;
+padding-top: 24px;
+padding-bottom: 24px;
 font-family: inherit;
 color: var(--primery-text-color);
 font-weight: 600;
@@ -92,7 +113,7 @@ line-height: 1.28;
 }
 
 .auth-nav .item + .item {
-margin-left: 12px;
+margin-left: 40px;
     }
 
 .auth-nav .link {
@@ -110,187 +131,193 @@ color: blue;
         
 /* Container header-nav */
 
+.header-main {
+    display: flex;
+    align-items: center;
+    }
+
 .header-nav {
 display: flex;
 align-items: center;
 }
 
 .site-nav {
-    display: flex;
-    align-items: center;
-    margin-left: 76px;
+display: flex;
+align-items: center;
+margin-left: 176px;
 }
 
 .auth-nav {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+display: flex;
+align-items: center;
+margin-left: auto;
 }
 
-.header-main {
-    display: flex;
-    align-items: center;
-    
-}
 
-    /* hero */
+/* hero */
         
 .hero {
 background-color: var(--primery-text-color);
 text-align: center;
-padding-top: 180px;
-padding-bottom: 250px;
 }
         
 .hero-title {
 margin-top: 0;
-min-width: 169px;
-/* margin-bottom: 48px;
-padding-top: 188px; */
-font-family: inherit;
-color: var(--accent-color);
-font-weight: 600;
-font-size: 56px;
-font-size: 0.9;
+padding-top: 188px;
+margin-left: auto;
+margin-right: auto;
 text-align: center;
-}
-        
+font-family: inherit;
+color:#fff;
+font-weight: 700;
+max-width: 496px;
+font-size: 56px;
+line-height: 1.07;
+text-align: center;
+}   
+
 .modal-btn {
 display: inline-block;
-border-radius: 4px;
-/* margin-bottom: 188px; */
-padding: 16px, 32px;
-
+flex-direction: row;
+align-items: center;
+padding:  16px 32px;
+margin-bottom: 188px;
 color: #fff;
 background-color: #4D5AE5;
 font-family: inherit;
-font-weight: 600;
+min-width: 170px;
+font-weight: 500;
 font-size: 16px;
-line-height: 1.1;
+line-height: 1.19;
 letter-spacing: 0.04em;
-text-transform: uppercase;
 cursor: pointer; 
 border: none;
+text-align: center;
    } 
-        
+
 .modal-btn:hover,
 .modal-btn:focus {
 background-color: #fff;
 color: #4D5AE5;
     }
         
-        
     /* секция BOX преимущества */
         
 .box {
-margin: 0;
-padding: 0;
-    }
-
-.box {
 display: flex;
+gap: 24px;
+margin: 0;
+padding-top: 72px;
+padding-bottom: 120px;
+padding-left: 0px;
     }
 
 .box-item {
-    margin-right: 24px;
+ /* margin-right: 24px; */
+}
+
+.box-item:nth-child(4n) {
+margin-right: 0;
 }
 
 .title-none {
 overflow: hidden;
     } 
-        
-    .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    overflow: hidden;
+
+.visually-hidden {
+clip: rect(0 0 0 0);
+clip-path: inset(50%);
+height: 1px;
+overflow: hidden;
+position: absolute;
+white-space: nowrap;
+width: 1px;
+overflow: hidden;
     }
 
-    .box-title {
-    padding-top: 120px;
-    margin-top: 0;
-    margin-bottom: 8px;
-    color: var(--primery-text-color);
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;  
+.box-title {
+/* padding-top: 120px; */
+margin-top: 0;
+margin-bottom: 0;
+width: 264px;
+color: var(--primery-text-color);
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;  
     }
         
-    .box-text {
-    color: var(--second-text-color);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.2;
-    padding-top: 0;
-    margin-top: 0;
-    margin-bottom: 120px;
+.box-text {
+margin-top: 0;
+margin-bottom: 0;
+padding-top: 8px;
+color: var(--second-text-color);
+font-weight: 400;
+font-size: 16px;
+line-height: 1.2;
     }
         
     /* Work-people */
         
-    .work-block {
-    background-color: #E5E5E5;
-    /* margin: 0; */
+.work-block {
+background-color: #E5E5E5;
     }
 
     img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+display: block;
+max-width: 100%;
+height: auto;
 }
-    .pictures {
-    font-weight: 600;
-    font-size: 36px;
-    line-height: 0.9;
-    text-align: center;
-    margin-top: 0;
-    /* padding-top: 120px; */
-    margin-bottom: 70px;
+
+.pictures {
+font-weight: 700;
+font-size: 36px;
+line-height: 0.9;
+text-align: center;
+text-transform: capitalize;
+margin: 0;
+padding-top: 120px;
     }
 
-    .pictures-list {
-        display: flex;
-        /* justify-content: space-around; */
-    }
-    
 .pictures-list {
-margin-left: 100px;
-margin-right: 100px;
-margin-bottom: 120px;}
-
-    .pictures-item {
-        margin-right: 24px;
-    }
+display: flex;
+gap: 24px;
+padding: 0;
+padding-bottom: 120px;
+margin-top: 72px;
+}
+    
+/* .pictures-item {
+        /* margin-right: 24px; */
+ */
 
     /* work */
 
 .work-list {
     display: flex;
+    gap: 24px;
+    }
+
+.work-list {
+    padding-top: 72px;
+    padding-bottom: 120px;
+    padding-left: 0;
 }
 
-.work-list .work-item {
- margin-bottom: 120px; 
- 
+.work-shadow {
+    background-color: #fff;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 
-
-.work-item {
-    margin-right: 24px;
-}
-
-    .work-tetle {
-        background-color: #fff;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 0.9;
-    text-align: center;
-    margin: 0;
-    padding-top: 32px;
-    padding-bottom: 8px;
+.work-tetle {
+background-color: #fff;
+font-weight: 500;
+font-size: 20px;
+line-height: 0.9;
+text-align: center;
+margin: 0;
+padding-top: 32px;
+padding-bottom: 8px;
     }
         
 .work-text {
@@ -304,65 +331,75 @@ padding-bottom: 32px;
     }
     
     
-    .logo-block {
-    background-color: #2E2F42;
-    height: 310px;
-    width: 1158px;;
-    padding: 100px 200px 130px 0;
-    padding-left: 56px;
-    margin: 0 auto;
+.logo-block {
+background-color: #2E2F42;
+height: 310px;
 }
+
+.logo-footer {
+    display: flex;
+    align-items: center;
+    padding-top: 100px;
+    padding-left: 0px;
+    margin-bottom: 16px;
+    font-family: "Raleway", sans-serif;
+    color:#4D5AE5;
+    width: 44px;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.03em;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.14;
+    }
         
-    .copy-text {
-    color: var(--accent-color);
-    width: 264px; 
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.28;
+.copy-text {
     margin: 0;
-   padding-top: 16px;
+padding: 0px;
+color: var(--accent-color);
+max-width: 364px; 
+font-weight: 400;
+font-size: 16px;
+line-height: 1.28;
     }
     
     /* Portfolio */
         
-    .logo-block .second {
-    color: #fff;
+.logo-block .second {
+color: #fff;
     }
         
     /* menu buttons */
     
 .list-buttom {
-display: flex;
-padding-top: 96px;
-gap: 30px;
-margin-bottom: 84px;
-    }
-
-.list-button {
-display: block;
-padding: 12px 24px;
-border-radius: 4px;
-/* margin: 0; */ 
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 96px;
+    gap: 30px;
+    margin: 0;
+    border-radius: 4px;
+    /* border: 1px solid #E7E9FC; */
+}
 
 .list-item {
 padding-top: 72px;
 }
 
-    .menu-btn {
+.menu-btn {
 display: inline-block;
 border-radius: 4px;
-padding: 16px, 32px;
+padding: 12px, 24px;
 margin: 0;
-min-width: 169px;
+min-width: 119px;
 height: 48px;
 color: #4D5AE5;
 background-color: #F4F4FD;
 font-family: inherit;
-font-weight: 600;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.1;
-letter-spacing: 0.3em;
+letter-spacing: 0.04em;
 text-align: center;
 cursor: pointer;
 border: none;
@@ -382,17 +419,21 @@ flex-wrap: wrap;
 column-gap: 24px;
 row-gap: 49px;
 margin: 0;
-padding: 0;
+padding-bottom: 120px;
+padding-left: 0;
+padding-top: 72px;
 }
-
-.presentation {
- margin-bottom: 120px;
- }
 
 .presentation-blok {
  font-family: inherit;
 text-decoration: none;
 }
+
+.presentation-shadow {
+    background: #FFFFFF;
+    border: 1px solid #E7E9FC;
+}
+
     
 .presentation-list {
 width: 360px;
@@ -404,26 +445,25 @@ margin-right: 0;
 }
 
 .presentation-title {
-margin: 0;
+    margin-top: 0;
+margin-bottom: 8px;
 padding-top: 32px;
+padding-left:  16px;
 font-family: inherit;
 color: var(--primery-text-color);
-font-weight: 600;
-font-size: 16px;
-line-height: 1;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
     }
         
 .presentation-text {
+    padding-bottom: 32px;
+padding-left:  16px;
 font-family: inherit;
 font-weight: 400;
 font-style: normal;
+font-size: 16px;
+line-height: 1.5;
 margin: 0;
-padding-top: 8px;
 }
         
-.presentation-subject {
-color: #F4F4FD;
-font-weight: 400;
-font-size: 16px;
-line-height: 1;
-}
