--- a/css/styles.css
+++ b/css/styles.css
@@ -293,17 +293,17 @@ margin-top: 72px;
     /* work */
 
 .work-list {
-    display: flex;
+    display: inline-block;
+flex-direction: row;
     gap: 24px;
-    }
-
-.work-list {
     padding-top: 72px;
     padding-bottom: 120px;
-    padding-left: 0;
+padding-left: 0;
 }
 
 .work-shadow {
+    
+    width: 264px;
     background-color: #fff;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
