--- a/css/styles.css
+++ b/css/styles.css
@@ -35,10 +35,7 @@ background: #FFFFFF;
 border-bottom: 1px solid #E7E9FC;
 }
 
-section {
-padding-top: 120px;
-padding-bottom: 72px;
-    }
+
 
 footer {
 background-color:var(--primery-text-color);
@@ -204,12 +201,22 @@ color: #4D5AE5;
     }
         
     /* секция BOX преимущества */
+.section {
+padding-top: 120px;
+padding-bottom: 120px;
+    }
+
+    .section-one {
+        padding-top: 120px;
+        padding-bottom: 0px;
+    }
         
 .box {
 display: flex;
 gap: 24px;
 margin: 0;
 padding-left: 0px;
+padding-bottom: 0px;
  }
 
 .box-item {
@@ -279,13 +286,12 @@ display: flex;
 gap: 24px;
 padding: 0;
 }
-    
 
     /* work */
 
-.work-block {
+/* .work-block {
 background-color: #E5E5E5;
-}
+} */
 
 .work-list {
 display: flex;
@@ -326,13 +332,12 @@ padding-bottom: 32px;
     
 .logo-block {
 background-color: #2E2F42;
-height: 310px;
-}
+padding-top: 100px;
+padding-bottom: 100px;}
 
 .logo-footer {
 display: flex;
 align-items: center;
-padding-top: 100px;
 padding-left: 0px;
 margin-bottom: 16px;
 font-family: "Raleway", sans-serif;
@@ -388,6 +393,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.1;
 letter-spacing: 0.04em;
+border-radius: 4px;
 text-align: center;
 cursor: pointer;
 border: none;
@@ -423,7 +429,6 @@ border: 1px solid #E7E9FC;
     
 .presentation-list {
 width: 360px;
-border:  1px solid #F4F4FD;
 }
 
 .presentation-list:nth-child(3n) {
