--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ border-bottom: 1px solid #E7E9FC;
 
 footer {
 background-color:var(--primery-text-color);
+padding-top: 100px;
+padding-bottom: 100px;
 }
 
 .h1.hero-title {
@@ -206,9 +208,9 @@ padding-top: 120px;
 padding-bottom: 120px;
     }
 
-    .section-one {
-        padding-top: 120px;
-        padding-bottom: 0px;
+.section-one {
+padding-top: 120px;
+padding-bottom: 0px;
     }
         
 .box {
@@ -218,10 +220,6 @@ margin: 0;
 padding-left: 0px;
 padding-bottom: 0px;
  }
-
-.box-item {
- /* margin-right: 24px; */
-}
 
 .box-item:nth-child(4n) {
 margin-right: 0;
@@ -297,8 +295,6 @@ background-color: #E5E5E5;
 display: flex;
 flex-direction: row;
 gap: 24px;
-/* padding-top: 72px;
-padding-bottom: 120px; */
 padding-left: 0;
 }
 
@@ -332,8 +328,7 @@ padding-bottom: 32px;
     
 .logo-block {
 background-color: #2E2F42;
-padding-top: 100px;
-padding-bottom: 100px;}
+}
 
 .logo-footer {
 display: flex;
@@ -375,16 +370,19 @@ flex-direction: row;
 justify-content: center;
 gap: 30px;
 margin: 0;
-border-radius: 4px;
 margin-bottom: 72px;
+padding: 12px 24px;
+border-radius: 4px;
+box-sizing: border-box;
+align-items: center;
+min-width: 116px;
 }
 
 .menu-btn {
 display: inline-block;
-border-radius: 4px;
 padding: 12px, 24px;
 margin: 0;
-min-width: 119px;
+min-width: 78px;
 height: 48px;
 color: #4D5AE5;
 background-color: #F4F4FD;
@@ -393,10 +391,11 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.1;
 letter-spacing: 0.04em;
+border: 1px solid #E7E9FC;
 border-radius: 4px;
 text-align: center;
 cursor: pointer;
-border: none;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
         
 .menu-btn:hover,
@@ -423,7 +422,9 @@ text-decoration: none;
 
 .presentation-shadow {
 background: #FFFFFF;
-border: 1px solid #E7E9FC;
+border-left: 1px solid #E7E9FC;
+border-bottom: 1px solid #E7E9FC;
+border-right: 1px solid #E7E9FC;
 }
 
     
